--- a/style.css
+++ b/style.css
@@ -30,10 +30,10 @@ nav a:hover {
   color: #fff;
 }
 
-li {
+main a {
   color:#000;
 }
-li:hover {
+main a:hover {
   color:#000;
   font-weight: bold;
 }
